// Copyright 2022 ETH
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/scionproto/scion/go/pkg/proto/colibri";

package proto.colibri.v1;

import "proto/colibri/v1/colibri.proto";
import "proto/crypto/v1/signed.proto";
import "proto/control_plane/v1/cppki.proto";
import "google/protobuf/timestamp.proto";

service DRKeyService {
    // RenewChain creates a chain from the chain request.
    rpc DRKey(DRKeyRequest) returns (DRKeyResponse) {}
}

message DRKeyRequest {
    // chain is the certificate chain that contains the public signing key
    // it must be validate against a valid TRC
    proto.control_plane.v1.Chain chain = 1;
    // segment contains the segments over which the request travels
    repeated ReservationID segments = 2;
    // index of the current segment.
    // If the node is transfer, the first segment it belongs to.
    uint32 current_segment = 3;
    // signed request containing drkey request
    proto.crypto.v1.SignedMessage signed_request = 4;
}

message DRKeyRequestBody {
    // eph_pubkey for deriving/encrypting DRKey message in KEM/DEM
    bytes eph_pubkey = 1;
    // Validity time for the requested key
	google.protobuf.Timestamp val_time  = 2;
}

message DRKeyResponse {
    // chain is the certificate chain that contains the public signing key
    // it must be validate against a valid TRC
    proto.control_plane.v1.Chain chain = 1;
    // signed response containing drkey response
    proto.crypto.v1.SignedMessage signed_response = 2;
}

message DRKeyResponseBody {
    // eph_pubkey for deriving/decrypting DRKey message in KEM/DEM
    bytes eph_pubkey = 1;
    // nonce is used for decrypting the ciphertext.
    bytes nonce = 2;
    // ciphertext containing the response
    bytes cipher = 3;
}

message ASHostResponse{
    // Begin of validity period of DRKey.
    google.protobuf.Timestamp epoch_begin = 1;
    // End of validity period of DRKey.
    google.protobuf.Timestamp epoch_end = 2;
    // Lvl2 key.
    bytes key = 3;
  }